--- a/src/app/account/analyses/report/shared/components/modal-edit/modal-edit.html
+++ b/src/app/account/analyses/report/shared/components/modal-edit/modal-edit.html
@@ -43,6 +43,7 @@
       <form-text
         [controlState]="formState.controls.variantClassification"
         label="{{ 'ACCOUNT.ANALYSES.REPORT.MODAL_EDIT.TEXT_VARIANT_CLASSIFICATION' | translate }}"
+        class="cell-variant-classification"
         [validationMessages]="{
           required: 'ACCOUNT.ANALYSES.REPORT.MODAL_EDIT.ERRORS.TEXT_VARIANT_CLASSIFICATION_IS_REQUIRED' | translate
         }">
