--- a/src/app/account/analyses/report/shared/components/additionals/additionals.html
+++ b/src/app/account/analyses/report/shared/components/additionals/additionals.html
@@ -2,10 +2,20 @@
   (submit)="onSubmit()"
   [ngrxFormState]="formState">
   <h2>{{ 'ACCOUNT.ANALYSES.REPORT.TITLE_LITERATURE' | translate }}</h2>
-  <textarea [ngrxFormControlState]="formState.controls.literature"></textarea>
+  <form-textarea
+    [controlState]="formState.controls.literature"
+    [validationMessages]="{
+      required: 'ACCOUNT.ANALYSES.REPORT.ERRORS.TEXT_LITERATURE_IS_REQUIRED' | translate
+    }">
+  </form-textarea>
 
   <h2>{{ 'ACCOUNT.ANALYSES.REPORT.TITLE_ADDITIONAL_COMMENTS' | translate }}</h2>
-  <textarea [ngrxFormControlState]="formState.controls.comment"></textarea>
+  <form-textarea
+    [controlState]="formState.controls.comment"
+    [validationMessages]="{
+      required: 'ACCOUNT.ANALYSES.REPORT.ERRORS.TEXT_COMMENTS_IS_REQUIRED' | translate
+    }">
+  </form-textarea>
 
   <div>
     <button type="submit">{{ 'ACCOUNT.ANALYSES.REPORT.BUTTON_CREATE_REPORT' | translate }}</button>
