#60: Implement custom report

--- a/src/app/account/shared/navbar-secondary/navbar-secondary.html
+++ b/src/app/account/shared/navbar-secondary/navbar-secondary.html
@@ -6,6 +6,7 @@
         <a routerLink="/user-groups" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_USER_GROUPS' | translate }}</a>
         <a routerLink="/gene-panels" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_GENE_PANELS' | translate }}</a>
         <a routerLink="/analyses" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_ANALYSES' | translate }}</a>
+        <a routerLink="/custom-reports" routerLinkActive="active" class="bttn">{{ 'ACCOUNT.NAVBAR.LINK_CUSTOM_REPORTS' | translate }}</a>
       </div>
     </div>
     <section>
