#60: Implement custom report

--- a/src/app/account/custom-reports/report/report.html
+++ b/src/app/account/custom-reports/report/report.html
@@ -1,15 +1,38 @@
 <ng-container *ngIf="!(isLoading$ | async)">
   <div *ngVar="formState$ | async as formState" class="report-page">
-    <analyses-report-patient
-      [data]="patientData$ | async">
-    </analyses-report-patient>
+    <form
+      *ngVar="customReport$ | async as customReport"
+      (submit)="onSubmit()"
+      [ngrxFormState]="formState">
 
-    <analyses-report-result-items
-      [formState]="formState">
-    </analyses-report-result-items>
+      <custom-reports-report-accession
+        [data]="customReport"
+        [formState]="formState">
+      </custom-reports-report-accession>
 
-    <analyses-report-additionals
-      [formState]="formState">
-    </analyses-report-additionals>
+      <custom-reports-report-genes
+        [data]="customReport"
+        [formState]="formState">
+      </custom-reports-report-genes>
+
+      <custom-reports-report-variations
+        [data]="customReport"
+        [formState]="formState">
+      </custom-reports-report-variations>
+
+      <custom-reports-report-result
+        [data]="customReport"
+        [formState]="formState">
+      </custom-reports-report-result>
+
+      <custom-reports-report-interpretation
+        [data]="customReport"
+        [formState]="formState">
+      </custom-reports-report-interpretation>
+
+      <div>
+        <button type="submit">{{ 'ACCOUNT.ANALYSES.REPORT.BUTTON_CREATE_REPORT' | translate }}</button>
+      </div>
+    </form>
   </div>
 </ng-container>
