--- a/src/app/account/custom-reports/report/report.scss
+++ b/src/app/account/custom-reports/report/report.scss
@@ -19,4 +19,7 @@
   textarea {border: 1px solid rgb(155, 173, 189); border-radius: 4px; min-width: 75%;
     margin: 0px; height: 150px; min-height: 150px; width: 901px; margin-top: 40px;
   }
+  input[type=text], .dropdown {border: 1px solid rgb(155, 173, 189); width: 220px;}
+  .dropdown {height: 27px!important;}
+  .dropdown-content {top: 106%!important;}
 }
