#60: Implement custom report

--- a/src/app/account/analyses/report/shared/components/additionals/additionals.html
+++ b/src/app/account/analyses/report/shared/components/additionals/additionals.html
@@ -18,6 +18,6 @@
   </form-textarea>
 
   <div>
-    <button type="submit">{{ 'ACCOUNT.ANALYSES.REPORT.BUTTON_CREATE_REPORT' | translate }}</button>
+    <button class="bttn active" type="submit">{{ 'ACCOUNT.ANALYSES.REPORT.BUTTON_CREATE_REPORT' | translate }}</button>
   </div>
 </form>
