--- a/src/app/account/custom-reports/report/report.html
+++ b/src/app/account/custom-reports/report/report.html
@@ -33,7 +33,7 @@
       </custom-reports-report-interpretation>
 
       <div>
-        <button type="submit">{{ 'ACCOUNT.ANALYSES.REPORT.BUTTON_CREATE_REPORT' | translate }}</button>
+        <button class="bttn active" type="submit">{{ 'ACCOUNT.ANALYSES.REPORT.BUTTON_CREATE_REPORT' | translate }}</button>
       </div>
     </form>
   </div>
