--- a/src/app/account/custom-reports/report/shared/components/genes/genes.html
+++ b/src/app/account/custom-reports/report/shared/components/genes/genes.html
@@ -1,4 +1,8 @@
 <h2>{{ 'ACCOUNT.CUSTOM_REPORTS.REPORT.TITLE_GENES_ANALYZED' | translate }}</h2>
+<div class="report-disclaimer">
+  <div>{{ 'ACCOUNT.CUSTOM_REPORTS.REPORT.TEXT_SELECT_GENES' | translate }}</div>
+  <div>{{ 'ACCOUNT.CUSTOM_REPORTS.REPORT.TEXT_CREATE_NEW' | translate }}</div>
+</div>
 <div class="report-row">
   <div class="report-col report-col-50">
     <custom-select
