--- a/src/app/account/custom-reports/report/shared/components/accession/accession.html
+++ b/src/app/account/custom-reports/report/shared/components/accession/accession.html
@@ -6,7 +6,7 @@
     </form-text>
   </div>
 </div>
-<div class="report-row">
+<!--<div class="report-row">
   <div class="report-col report-col-50">
     <div class="report-col report-col-50 report-col-title">{{ 'ACCOUNT.CUSTOM_REPORTS.REPORT.TEXT_TEST_CODE' | translate }}</div>
     <div class="report-col report-col-50">XXXXX</div>
@@ -17,4 +17,4 @@
     <div class="report-col report-col-50 report-col-title">{{ 'ACCOUNT.CUSTOM_REPORTS.REPORT.TEXT_TEST_NAME' | translate }}</div>
     <div class="report-col report-col-50">XXXXX</div>
   </div>
-</div>
+</div>-->
